Hadoop MapReduce Change Log

Trunk (Unreleased)

  INCOMPATIBLE CHANGES
    MAPREDUCE-5785. Derive heap size or mapreduce.*.memory.mb automatically.
    (Gera Shegalov and Karthik Kambatla via gera)

    MAPREDUCE-5653. DistCp does not honour config-overrides for
    mapreduce.[map,reduce].memory.mb (Ratandeep Ratti via aw)

  NEW FEATURES

    MAPREDUCE-778. Rumen Anonymizer. (Amar Kamat and Chris Douglas via amarrk)

    MAPREDUCE-2669. Add new examples for Mean, Median, and Standard Deviation.
    (Plamen Jeliazkov via shv)

    MAPREDUCE-4887. Add RehashPartitioner, to smooth distributions
    with poor implementations of Object#hashCode().  (Radim Kolar via cutting)

    MAPREDUCE-5232. Add a configuration to be able to log classpath and other
    system properties on mapreduce JVMs startup.  (Sangjin Lee via vinodkv)

    MAPREDUCE-5910. Make MR AM resync with RM in case of work-preserving
    RM-restart. (Rohith via jianhe)

    MAPREDUCE-2841. Add a native implementation of MapOutputCollector.
    (see section below for detailed breakdown)

  IMPROVEMENTS

    MAPREDUCE-3481. [Gridmix] Improve Gridmix STRESS mode. (amarrk)

    MAPREDUCE-3597. [Rumen] Rumen should provide APIs to access all the
                    job-history related information.

    MAPREDUCE-3375. [Gridmix] Memory Emulation system tests.
                    (Vinay Thota via amarrk)

    MAPREDUCE-2733. [Gridmix] Gridmix3 cpu emulation system tests.
                    (Vinay Thota via amarrk)

    MAPREDUCE-2836. Provide option to fail jobs when submitted to non-existent
    fair scheduler pools. (Ahmed Radwan via todd)

    MAPREDUCE-3171. normalize nodemanager native code compilation with common/hdfs
    native. (tucu)

    MAPREDUCE-3149. Add a test to verify that TokenCache handles file system
    uri with no authority. (John George via jitendra)

    MAPREDUCE-3169. Create a new MiniMRCluster equivalent which only provides
    client APIs cross MR1 and MR2 (Ahmed via tucu)
