@@ -4001,7 +4001,9 @@ specifier|static
 name|String
 name|headerPattern
 init|=
-literal|"%23s\t%10s\t%14s\t%12s\t%12s\t%10s\t%15s\t%15s\t%8s\t%8s\t%10s\t%10s\n"
+literal|"%23s\t%20s\t%10s\t%14s\t%12s\t%12s"
+operator|+
+literal|"\t%10s\t%15s\t%15s\t%8s\t%8s\t%10s\t%10s\n"
 decl_stmt|;
 annotation|@
 name|Private
@@ -4011,7 +4013,9 @@ specifier|static
 name|String
 name|dataPattern
 init|=
-literal|"%23s\t%10s\t%14d\t%12s\t%12s\t%10s\t%15s\t%15s\t%8s\t%8s\t%10s\t%10s\n"
+literal|"%23s\t%20s\t%10s\t%14d\t%12s\t%12s"
+operator|+
+literal|"\t%10s\t%15s\t%15s\t%8s\t%8s\t%10s\t%10s\n"
 decl_stmt|;
 DECL|field|memPattern
 specifier|private
@@ -4062,6 +4066,8 @@ argument_list|(
 name|headerPattern
 argument_list|,
 literal|"JobId"
+argument_list|,
+literal|"JobName"
 argument_list|,
 literal|"State"
 argument_list|,
@@ -4134,6 +4140,17 @@ operator|.
 name|getNeededMem
 argument_list|()
 decl_stmt|;
+name|int
+name|jobNameLength
+init|=
+name|job
+operator|.
+name|getJobName
+argument_list|()
+operator|.
+name|length
+argument_list|()
+decl_stmt|;
 name|writer
 operator|.
 name|printf
@@ -4147,6 +4164,24 @@ argument_list|()
 operator|.
 name|toString
 argument_list|()
+argument_list|,
+name|job
+operator|.
+name|getJobName
+argument_list|()
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|jobNameLength
+operator|>
+literal|20
+condition|?
+literal|20
+else|:
+name|jobNameLength
+argument_list|)
 argument_list|,
 name|job
 operator|.
