@@ -3371,6 +3371,299 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Test -list option displays job name.    * The name is capped to 20 characters for display.    */
+DECL|method|testJobName ()
+specifier|public
+name|void
+name|testJobName
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Configuration
+name|conf
+init|=
+name|createJobConf
+argument_list|()
+decl_stmt|;
+name|CLI
+name|jc
+init|=
+name|createJobClient
+argument_list|()
+decl_stmt|;
+name|Job
+name|job
+init|=
+name|MapReduceTestUtil
+operator|.
+name|createJob
+argument_list|(
+name|conf
+argument_list|,
+name|getInputDir
+argument_list|()
+argument_list|,
+name|getOutputDir
+argument_list|()
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|"short_name"
+argument_list|)
+decl_stmt|;
+name|job
+operator|.
+name|setJobName
+argument_list|(
+literal|"mapreduce"
+argument_list|)
+expr_stmt|;
+name|job
+operator|.
+name|setPriority
+argument_list|(
+name|JobPriority
+operator|.
+name|NORMAL
+argument_list|)
+expr_stmt|;
+name|job
+operator|.
+name|waitForCompletion
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|String
+name|jobId
+init|=
+name|job
+operator|.
+name|getJobID
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|verifyJobName
+argument_list|(
+name|jobId
+argument_list|,
+literal|"mapreduce"
+argument_list|,
+name|conf
+argument_list|,
+name|jc
+argument_list|)
+expr_stmt|;
+name|Job
+name|job2
+init|=
+name|MapReduceTestUtil
+operator|.
+name|createJob
+argument_list|(
+name|conf
+argument_list|,
+name|getInputDir
+argument_list|()
+argument_list|,
+name|getOutputDir
+argument_list|()
+argument_list|,
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|"long_name"
+argument_list|)
+decl_stmt|;
+name|job2
+operator|.
+name|setJobName
+argument_list|(
+literal|"mapreduce_job_with_long_name"
+argument_list|)
+expr_stmt|;
+name|job2
+operator|.
+name|setPriority
+argument_list|(
+name|JobPriority
+operator|.
+name|NORMAL
+argument_list|)
+expr_stmt|;
+name|job2
+operator|.
+name|waitForCompletion
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|jobId
+operator|=
+name|job2
+operator|.
+name|getJobID
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+expr_stmt|;
+name|verifyJobName
+argument_list|(
+name|jobId
+argument_list|,
+literal|"mapreduce_job_with_l"
+argument_list|,
+name|conf
+argument_list|,
+name|jc
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|verifyJobName (String jobId, String name, Configuration conf, CLI jc)
+specifier|protected
+name|void
+name|verifyJobName
+parameter_list|(
+name|String
+name|jobId
+parameter_list|,
+name|String
+name|name
+parameter_list|,
+name|Configuration
+name|conf
+parameter_list|,
+name|CLI
+name|jc
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|PipedInputStream
+name|pis
+init|=
+operator|new
+name|PipedInputStream
+argument_list|()
+decl_stmt|;
+name|PipedOutputStream
+name|pos
+init|=
+operator|new
+name|PipedOutputStream
+argument_list|(
+name|pis
+argument_list|)
+decl_stmt|;
+name|int
+name|exitCode
+init|=
+name|runTool
+argument_list|(
+name|conf
+argument_list|,
+name|jc
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"-list"
+block|,
+literal|"all"
+block|}
+argument_list|,
+name|pos
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Exit code"
+argument_list|,
+literal|0
+argument_list|,
+name|exitCode
+argument_list|)
+expr_stmt|;
+name|BufferedReader
+name|br
+init|=
+operator|new
+name|BufferedReader
+argument_list|(
+operator|new
+name|InputStreamReader
+argument_list|(
+name|pis
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|String
+name|line
+init|=
+literal|null
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|line
+operator|=
+name|br
+operator|.
+name|readLine
+argument_list|()
+operator|)
+operator|!=
+literal|null
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"line = "
+operator|+
+name|line
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|line
+operator|.
+name|contains
+argument_list|(
+name|jobId
+argument_list|)
+condition|)
+block|{
+continue|continue;
+block|}
+name|assertTrue
+argument_list|(
+name|line
+operator|.
+name|contains
+argument_list|(
+name|name
+argument_list|)
+argument_list|)
+expr_stmt|;
+break|break;
+block|}
+name|pis
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|createJobClient ()
 specifier|protected
 name|CLI
